fix: fixed overflow

--- a/style.css
+++ b/style.css
@@ -30,9 +30,8 @@ main {
   content: "";
   position: absolute;
   top: 0;
-
   left: 50%;
-  width: 10%;
+  width: 45%;
   height: 100%;
   background: linear-gradient(to right, #000, transparent);
   opacity: 0.1;
@@ -72,7 +71,7 @@ h2 {
 }
 
 main i {
-  position: absolute;
+  position: fixed;
   background: #ff2a2a;
   border-radius: 100%;
   animation: bubbleUp linear infinite;
